--- a/plansys2_msgs/package.xml
+++ b/plansys2_msgs/package.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
-<package format="3">
+<package format="2">
   <name>plansys2_msgs</name>
   <version>2.0.8</version>
   
-  <description>Messages and service files for the ROS2 Planning System</description>
+  <description>Messages and service files for the ROS2 Planning System (backported to ROS1)</description>
 
   <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>
- 
+  <maintainer email="ana@traclabs.com">Ana C.H.Q. </maintainer>
+  
   <license>Apache License, Version 2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>rclcpp</depend>
+  <depend>roscpp</depend>
   <depend>std_msgs</depend>
-  <depend>action_msgs</depend>
-  <depend>builtin_interfaces</depend>
-  <depend>rosidl_default_generators</depend>
+  <depend>actionlib_msgs</depend>
+  <depend>message_generation</depend>
 
-  <member_of_group>rosidl_interface_packages</member_of_group>
+  <exec_depend>message_runtime</exec_depend>
+
 
   <export>
-    <build_type>ament_cmake</build_type>
   </export>
+
 </package>
