--- a/plansys2_pddl_parser/package.xml
+++ b/plansys2_pddl_parser/package.xml
@@ -13,27 +13,23 @@
       * CMakeLists.txt for cmake compilation
       * Reading from String instead of files
       * Licensing
+      Modifications TRACLabs: Backport to ROS1
   </description>
 
-  <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>
+  <maintainer email="ana@traclabs.com">A.C. Huaman Quispe</maintainer>
  
   <license>Apache License, Version 2.0</license>
 
   <author>Anders Jonsson</author>
   <author>Francisco Martin</author>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>rclcpp</depend>
+  <depend>roscpp</depend>
   <depend>plansys2_msgs</depend>
   <depend>std_msgs</depend>
 
-  <test_depend>ament_lint_common</test_depend>
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_cmake_gtest</test_depend>
-  <test_depend>ament_index_cpp</test_depend>
-
   <export>
-    <build_type>ament_cmake</build_type>
   </export>
+
 </package>
