plansys2_core compiles

--- a/plansys2_pddl_parser/CMakeLists.txt
+++ b/plansys2_pddl_parser/CMakeLists.txt
@@ -62,7 +62,7 @@ install(DIRECTORY include/${PROJECT_NAME}/
 
 install(TARGETS
   ${PROJECT_NAME}
-#  parser
+  parser
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
