--- a/plansys2_core/package.xml
+++ b/plansys2_core/package.xml
@@ -4,25 +4,24 @@
   <name>plansys2_core</name>
   <version>2.0.8</version>
   
-  <description>This package contains the PDDL-based core  for the ROS2 Planning System</description>
+  <description>This package contains the PDDL-based core  for the ROS2 Planning System.
+  TRACLabs backported it to ROS1</description>
 
-  <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>
+  <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>  
+  <author email="fmrico@gmail.com">Francisco Martin Rico</author>
  
   <license>Apache License, Version 2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>rclcpp</depend>
-  <depend>rclcpp_lifecycle</depend>
+  <depend>roscpp</depend>
+  <depend>lifecycle</depend>
   <depend>pluginlib</depend>
   <depend>plansys2_pddl_parser</depend>
   <depend>plansys2_msgs</depend>
 
-  <test_depend>ament_lint_common</test_depend>
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_cmake_gtest</test_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
   </export>
+
 </package>
