--- a/plansys2_popf_plan_solver/CMakeLists.txt
+++ b/plansys2_popf_plan_solver/CMakeLists.txt
@@ -2,59 +2,62 @@ project(plansys2_popf_plan_solver)
 
 cmake_minimum_required(VERSION 3.5)
 
-find_package(ament_cmake REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(ament_index_cpp REQUIRED)
-find_package(plansys2_core REQUIRED)
-find_package(pluginlib REQUIRED)
-
 set(CMAKE_CXX_STANDARD 17)
 
-set(dependencies
-  rclcpp
-  ament_index_cpp
-  plansys2_core
+set(DEPS
+  roscpp
+  lifecycle
   pluginlib
+  plansys2_core
+  plansys2_pddl_parser
+  plansys2_msgs
+)
+
+find_package(catkin REQUIRED COMPONENTS
+  ${DEPS}
+)  
+
+
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES ${PROJECT_NAME}
+  CATKIN_DEPENDS ${DEPS}
+  DEPENDS
 )
 
 include_directories(
   include
+  ${catkin_INCLUDE_DIRS}
 )
 
 add_library(${PROJECT_NAME} SHARED
   src/plansys2_popf_plan_solver/popf_plan_solver.cpp
 )
-ament_target_dependencies(${PROJECT_NAME} ${dependencies})
-
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 target_compile_definitions(${PROJECT_NAME} PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
 
-pluginlib_export_plugin_description_file(plansys2_core plansys2_popf_plan_solver_plugin.xml)
+#pluginlib_export_plugin_description_file(plansys2_core plansys2_popf_plan_solver_plugin.xml)
 
-install(DIRECTORY include/
-  DESTINATION include/
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h" 
 )
 
 install(FILES plansys2_popf_plan_solver_plugin.xml
-  DESTINATION share/${PROJECT_NAME}
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
 install(TARGETS
   ${PROJECT_NAME}
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION lib/${PROJECT_NAME}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  ament_lint_auto_find_test_dependencies()
+#if(BUILD_TESTING)
+#  find_package(ament_lint_auto REQUIRED)
+#  ament_lint_auto_find_test_dependencies()
 
-  find_package(ament_cmake_gtest REQUIRED)
-  add_subdirectory(test)
-endif()
-
-ament_export_include_directories(include)
-ament_export_libraries(${PROJECT_NAME})
-ament_export_dependencies(${dependencies})
-
-ament_package()
+#  find_package(ament_cmake_gtest REQUIRED)
+#  add_subdirectory(test)
+#endif()
