--- a/plansys2_popf_plan_solver/package.xml
+++ b/plansys2_popf_plan_solver/package.xml
@@ -10,22 +10,22 @@
  
   <license>Apache License, Version 2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>rclcpp</depend>
-  <depend>ament_index_cpp</depend>
+  <depend>roscpp</depend>
   <depend>plansys2_core</depend>
   <depend>pluginlib</depend>
+  <depend>lifecycle</depend>
+  <depend>plansys2_pddl_parser</depend>
+  <depend>plansys2_msgs</depend>
   
-  <exec_depend>popf</exec_depend>
-
+  <!--
   <test_depend>ament_lint_common</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ros2run</test_depend>
-
+-->
   <export>
-    <build_type>ament_cmake</build_type>
     <plansys2_core plugin="${prefix}/plansys2_popf_plan_solver_plugin.xml" />
   </export>
 </package>
