--- a/plansys2_domain_expert/package.xml
+++ b/plansys2_domain_expert/package.xml
@@ -10,12 +10,11 @@
  
   <license>Apache License, Version 2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>rclcpp</depend>
-  <depend>rclcpp_action</depend>
-  <depend>rclcpp_lifecycle</depend>
-  <depend>ament_index_cpp</depend>
+  <depend>roscpp</depend>
+<!--  <depend>rclcpp_action</depend>-->
+  <depend>lifecycle</depend>
   <depend>plansys2_pddl_parser</depend>
   <depend>plansys2_msgs</depend>
   <depend>plansys2_core</depend>
@@ -23,11 +22,11 @@
   <depend>std_msgs</depend>
   <depend>lifecycle_msgs</depend>
  
-  <test_depend>ament_lint_common</test_depend>
+<!--  <test_depend>ament_lint_common</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_cmake_gtest</test_depend>
-
+-->
   <export>
-    <build_type>ament_cmake</build_type>
   </export>
+
 </package>
