--- a/plansys2_problem_expert/CMakeLists.txt
+++ b/plansys2_problem_expert/CMakeLists.txt
@@ -2,34 +2,34 @@ project(plansys2_problem_expert)
 
 cmake_minimum_required(VERSION 3.5)
 
-find_package(ament_cmake REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(rclcpp_action REQUIRED)
-find_package(rclcpp_lifecycle REQUIRED)
-find_package(ament_index_cpp REQUIRED)
-find_package(plansys2_pddl_parser REQUIRED)
-find_package(plansys2_core REQUIRED)
-find_package(plansys2_msgs REQUIRED)
-find_package(plansys2_domain_expert REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(lifecycle_msgs REQUIRED)
-
 set(CMAKE_CXX_STANDARD 17)
 
-set(dependencies
-    rclcpp
-    rclcpp_action
-    rclcpp_lifecycle
-    plansys2_pddl_parser
-    ament_index_cpp
-    plansys2_core
-    plansys2_msgs
-    plansys2_domain_expert
-    std_msgs
-    lifecycle_msgs
+set(DEPS
+  roscpp
+  lifecycle
+  plansys2_pddl_parser
+  plansys2_core
+  plansys2_msgs
+  plansys2_domain_expert
+  std_msgs
+  lifecycle_msgs
 )
 
-include_directories(include)
+find_package(catkin REQUIRED COMPONENTS
+  ${DEPS}
+)  
+
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES ${PROJECT_NAME}
+  CATKIN_DEPENDS ${DEPS}
+  DEPENDS
+)
+
+include_directories(
+  include
+  ${catkin_INCLUDE_DIRS}
+)
 
 set(PROBLEM_EXPERT_SOURCES
   src/plansys2_problem_expert/ProblemExpert.cpp
@@ -39,38 +39,31 @@ set(PROBLEM_EXPERT_SOURCES
 )
 
 add_library(${PROJECT_NAME} SHARED ${PROBLEM_EXPERT_SOURCES})
-ament_target_dependencies(${PROJECT_NAME} ${dependencies})
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 
 add_executable(problem_expert_node
   src/problem_expert_node.cpp
 )
-ament_target_dependencies(problem_expert_node ${dependencies})
 target_link_libraries(problem_expert_node ${PROJECT_NAME})
 
-install(DIRECTORY include/
-  DESTINATION include/
-)
-
-install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
+foreach( dir config launch)
+   install( DIRECTORY ${dir}/
+         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/${dir} )
+endforeach(dir)
 
 install(TARGETS
   ${PROJECT_NAME}
   problem_expert_node
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION lib/${PROJECT_NAME}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  ament_lint_auto_find_test_dependencies()
+#if(BUILD_TESTING)
+#  find_package(ament_lint_auto REQUIRED)
+#  ament_lint_auto_find_test_dependencies()
 
-  find_package(ament_cmake_gtest REQUIRED)
-  add_subdirectory(test)
-endif()
+#  find_package(ament_cmake_gtest REQUIRED)
+#  add_subdirectory(test)
+#endif()
 
-ament_export_include_directories(include)
-ament_export_libraries(${PROJECT_NAME})
-ament_export_dependencies(${dependencies})
-
-ament_package()
