--- a/plansys2_problem_expert/package.xml
+++ b/plansys2_problem_expert/package.xml
@@ -10,7 +10,7 @@
  
   <license>Apache License, Version 2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
   
   <build_depend>qtbase5-dev</build_depend>
 
@@ -18,21 +18,22 @@
   <exec_depend>libqt5-gui</exec_depend>
   <exec_depend>libqt5-widgets</exec_depend>
 
-  <depend>rclcpp</depend>
-  <depend>rclcpp_action</depend>
-  <depend>rclcpp_lifecycle</depend>
-  <depend>ament_index_cpp</depend>
+  <depend>roscpp</depend>
+  <!--<depend>rclcpp_action</depend>-->
+  <depend>lifecycle</depend>
+
+  <depend>plansys2_core</depend>
   <depend>plansys2_pddl_parser</depend>
   <depend>plansys2_msgs</depend>
   <depend>plansys2_domain_expert</depend>
   <depend>std_msgs</depend>
   <depend>lifecycle_msgs</depend>
  
-  <test_depend>ament_lint_common</test_depend>
+  <!--<test_depend>ament_lint_common</test_depend>
   <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_cmake_gtest</test_depend>
+  <test_depend>ament_cmake_gtest</test_depend>-->
 
   <export>
-    <build_type>ament_cmake</build_type>
   </export>
+  
 </package>
