Close, 3 more files, I think

--- a/plansys2_executor/CMakeLists.txt
+++ b/plansys2_executor/CMakeLists.txt
@@ -1,44 +1,18 @@
 project(plansys2_executor)
 
+set(CMAKE_CXX_STANDARD 17)
+
 cmake_minimum_required(VERSION 3.5)
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
-find_package(ament_cmake REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(rclcpp_action REQUIRED)
-find_package(rclcpp_lifecycle REQUIRED)
-find_package(lifecycle_msgs REQUIRED)
-find_package(rclcpp_cascade_lifecycle REQUIRED)
-find_package(ament_index_cpp REQUIRED)
-find_package(plansys2_core REQUIRED)
-find_package(plansys2_pddl_parser REQUIRED)
-find_package(plansys2_msgs REQUIRED)
-find_package(plansys2_domain_expert REQUIRED)
-find_package(plansys2_problem_expert REQUIRED)
-find_package(plansys2_planner REQUIRED)
-find_package(pluginlib REQUIRED)
-find_package(behaviortree_cpp_v3 REQUIRED)
-find_package(std_msgs REQUIRED)
-
-find_package(ZMQ)
-if(ZMQ_FOUND)
-    message(STATUS "ZeroMQ found.")
-    add_definitions(-DZMQ_FOUND)
-else()
-  message(WARNING "ZeroMQ NOT found. Not including PublisherZMQ.")
-endif()
-
-set(CMAKE_CXX_STANDARD 17)
-
 set(dependencies
-    rclcpp
-    rclcpp_lifecycle
+    roscpp
+    lifecycle
     lifecycle_msgs
-    rclcpp_cascade_lifecycle
-    rclcpp_action
+#    rclcpp_cascade_lifecycle
+    actionlib
     plansys2_pddl_parser
-    ament_index_cpp
     plansys2_core
     plansys2_msgs
     plansys2_domain_expert
@@ -49,13 +23,39 @@ set(dependencies
     std_msgs
 )
 
-include_directories(include ${ZMQ_INCLUDE_DIRS})
+
+
+find_package(ZMQ)
+if(ZMQ_FOUND)
+    message(STATUS "ZeroMQ found.")
+    add_definitions(-DZMQ_FOUND)
+else()
+  message(WARNING "ZeroMQ NOT found. Not including PublisherZMQ.")
+endif()
+
+find_package(catkin REQUIRED COMPONENTS
+  ${dependencies}
+)  
+
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES ${PROJECT_NAME}
+  CATKIN_DEPENDS ${dependencies}
+  DEPENDS
+)
+
+include_directories(
+  include
+  ${catkin_INCLUDE_DIRS}
+  ${ZMQ_INCLUDE_DIRS}
+)
+ 
 
 set(EXECUTOR_SOURCES
   src/plansys2_executor/ExecutorClient.cpp
   src/plansys2_executor/ActionExecutor.cpp
-  src/plansys2_executor/ActionExecutorClient.cpp
-  src/plansys2_executor/ExecutorNode.cpp
+#  src/plansys2_executor/ActionExecutorClient.cpp
+#  src/plansys2_executor/ExecutorNode.cpp
   src/plansys2_executor/behavior_tree/execute_action_node.cpp
   src/plansys2_executor/behavior_tree/wait_action_node.cpp
   src/plansys2_executor/behavior_tree/check_action_node.cpp
@@ -69,49 +69,49 @@ set(EXECUTOR_SOURCES
 
 
 add_library(${PROJECT_NAME} SHARED ${EXECUTOR_SOURCES})
-ament_target_dependencies(${PROJECT_NAME} ${dependencies})
 target_link_libraries(${PROJECT_NAME} ${ZMQ_LIBRARIES})
 
-add_executable(executor_node
-  src/executor_node.cpp
-)
-ament_target_dependencies(executor_node ${dependencies})
-target_link_libraries(executor_node ${PROJECT_NAME})
+#add_executable(executor_node src/executor_node.cpp)
+#target_link_libraries(executor_node ${PROJECT_NAME})
 
-install(DIRECTORY include/
-  DESTINATION include/
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
 )
 
 add_library(bt_builder_plugins SHARED
   src/plansys2_executor/bt_builder_plugins/simple_bt_builder.cpp
   src/plansys2_executor/bt_builder_plugins/stn_bt_builder.cpp
-)
-ament_target_dependencies(bt_builder_plugins ${dependencies})
+  )
+target_link_libraries(bt_builder_plugins ${catkin_LIBRARIES})
+target_compile_definitions(bt_builder_plugins PRIVATE BT_PLUGIN_EXPORT)
+##ament_target_dependencies(bt_builder_plugins ${dependencies})
 
-pluginlib_export_plugin_description_file(plansys2_executor plugins.xml)
+#pluginlib_export_plugin_description_file(plansys2_executor plugins.xml)
 
-install(DIRECTORY launch behavior_trees DESTINATION share/${PROJECT_NAME})
+
+foreach( dir launch behavior_trees)
+   install( DIRECTORY ${dir}/
+         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/${dir} )
+endforeach(dir)
 
 install(TARGETS
   ${PROJECT_NAME}
   bt_builder_plugins
-  executor_node
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION lib/${PROJECT_NAME}
+#  executor_node
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  ament_lint_auto_find_test_dependencies()
 
-  find_package(ament_cmake_gtest REQUIRED)
 
-  add_subdirectory(test)
-endif()
+#if(BUILD_TESTING)
+#  find_package(ament_lint_auto REQUIRED)
+#  ament_lint_auto_find_test_dependencies()
 
-ament_export_include_directories(include)
-ament_export_libraries(${PROJECT_NAME} bt_builder_plugins)
-ament_export_dependencies(${dependencies})
+#  find_package(ament_cmake_gtest REQUIRED)
 
-ament_package()
+#  add_subdirectory(test)
+#endif()
+
