--- a/plansys2_lifecycle_manager/package.xml
+++ b/plansys2_lifecycle_manager/package.xml
@@ -10,17 +10,17 @@
  
   <license>Apache License, Version 2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>rclcpp</depend>
-  <depend>rclcpp_lifecycle</depend>
+  <depend>roscpp</depend>
+  <depend>lifecycle</depend>
   <depend>lifecycle_msgs</depend>
  
-  <test_depend>ament_lint_common</test_depend>
+<!--  <test_depend>ament_lint_common</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_cmake_gtest</test_depend>
-
+-->
   <export>
-    <build_type>ament_cmake</build_type>
   </export>
+  
 </package>
