--- a/plansys2_bringup/CMakeLists.txt
+++ b/plansys2_bringup/CMakeLists.txt
@@ -2,18 +2,10 @@ project(plansys2_bringup)
 
 cmake_minimum_required(VERSION 3.5)
 
-find_package(ament_cmake REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(plansys2_domain_expert REQUIRED)
-find_package(plansys2_problem_expert REQUIRED)
-find_package(plansys2_planner REQUIRED)
-find_package(plansys2_executor REQUIRED)
-find_package(plansys2_lifecycle_manager REQUIRED)
-
 set(CMAKE_CXX_STANDARD 17)
 
 set(dependencies
-    rclcpp
+    roscpp
     plansys2_domain_expert
     plansys2_problem_expert
     plansys2_planner
@@ -21,24 +13,44 @@ set(dependencies
     plansys2_lifecycle_manager
 )
 
+find_package(catkin REQUIRED COMPONENTS
+  ${dependencies}
+)  
+
+catkin_package(
+  INCLUDE_DIRS #include
+  LIBRARIES 
+  CATKIN_DEPENDS ${dependencies}
+  DEPENDS
+)
+
+include_directories(
+#  include
+  ${catkin_INCLUDE_DIRS}
+)
+  
+
 add_executable(plansys2_node
   src/plansys2_node.cpp
 )
-ament_target_dependencies(plansys2_node ${dependencies})
-target_compile_definitions(plansys2_node PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
+target_link_libraries(plansys2_node ${catkin_LIBRARIES})
+#target_compile_definitions(plansys2_node PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  ament_lint_auto_find_test_dependencies()
-endif()
+#if(BUILD_TESTING)
+#  find_package(ament_lint_auto REQUIRED)
+#  ament_lint_auto_find_test_dependencies()
+#endif()
 
-install(DIRECTORY launch params DESTINATION share/${PROJECT_NAME})
+foreach( dir params launch)
+   install( DIRECTORY ${dir}/
+         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/${dir} )
+endforeach(dir)
+
+
 install(TARGETS
   plansys2_node
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION lib/${PROJECT_NAME}
-)
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  )
 
-ament_export_dependencies(${dependencies})
-ament_package()
