--- a/plansys2_bt_actions/package.xml
+++ b/plansys2_bt_actions/package.xml
@@ -16,7 +16,7 @@
   <depend>lifecycle</depend>
   <depend>lifecycle_msgs</depend>
   <depend>plansys2_executor</depend>
-  <depend>behaviortree_cpp_v3</depend>
+  <depend>behaviortree_cpp</depend>
 <!--  <depend>action_msgs</depend>-->
   <depend>libzmq3-dev</depend>
 
