--- a/plansys2_executor/package.xml
+++ b/plansys2_executor/package.xml
@@ -24,7 +24,7 @@
   <depend>plansys2_problem_expert</depend>
   <depend>plansys2_planner</depend>
   <depend>pluginlib</depend>
-  <depend>behaviortree_cpp_v3</depend>
+  <depend>behaviortree_cpp</depend>
   <depend>std_msgs</depend>
   <depend>libzmq3-dev</depend>
 
